--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCC202 - Atividade 10: Gabriela Singulani Marques</title>
+    <script src="src/main.js" type="module"></script>
 </head>
 <body>
     <main>
         <h1>DCC202 - Atividade 10: Gabriela Singulani Marques</h1>
-        <p>Esta é a página principal tem código JavaScript nela. Você só verá o resultado no console durante a depuração.</p>
+        <p>Esta é a página principal tem código JavaScript nela. Você só verá o resultado no console e durante a depuração.</p>
     </main>
     
 </body>
